syntax = "proto3";

package prometheus;

// Defines the import path that should be used to import the generated package,
// and the package name.
option go_package = "github.com/powerslider/prometheus-grpc-exporter/proto;prometheus";

service PrometheusService {
  rpc GetMetrics(GetMetricsRequest) returns (stream TimeSeries);
}

message GetMetricsRequest {
  int32 id = 1;
}

message Sample {
  double value    = 1;
  int64 timestamp = 2;
}

message Label {
  string name  = 1;
  string value = 2;
}

message TimeSeries {
  repeated Label labels   = 1;
  repeated Sample samples = 2;
}

message MetricsBatch {
  repeated TimeSeries timeSeries = 1;
}

